# gedit-plugin-duplicate-c

./: README.md  duplicateline.c  duplicateline.plugin  meson.build
docs/: README.es.md  README.fr.md  README.it.md  README.ja.md  README.ko.md  README.pt.md  README.ru.md  README.zh.md
